Migrated photonfield classes into common project.